rust/src/nasl/interpreter/tests/snapshots/scannerlib__nasl__interpreter__tests__expected_str.snap
---
source: src/nasl/interpreter/tests/mod.rs
expression: "crate :: nasl :: interpreter :: tests ::\ninterpret_err(stringify! (expected_str), \"a =~ 5;\")"
---
error: Expected a string.
  ┌─ expected_str:1:6
  │
1 │ a =~ 5;
  │      ^ Expected a string.
